--- a/css/style.css
+++ b/css/style.css
@@ -34,6 +34,7 @@ html {
 .section-header-div {
     margin-top: 20px;
     margin-bottom: 20px;
+    background-color:aliceblue;
 }
 
 .section-header {
@@ -41,6 +42,7 @@ html {
     text-align: center;
     margin: 0;
     font-family: 'Ma Shan Zheng', cursive;
+    background-color:aliceblue;
     /* font-size: 50px; */
 }
 
