--- a/css/style.css
+++ b/css/style.css
@@ -55,17 +55,88 @@ html {
 }
 
 
-.box {
-    height: 100vh;
-    width: 100vw;
-    background-color: white;
-    margin-bottom: 20px;
-    transform: translateY(100vh);
+.section-header {
+    color: black;
+    text-align: center;
+    margin: 0;
+    font-family: 'Ma Shan Zheng', cursive;
+    background-color:rgba(93, 206, 136, 0);
+    font-size: 50px;
+    padding-top: 20px;
 }
 
 
+.content-container {
+    height: 70vh;
+    width: 90vw;
+    margin-left: 5vw;
+    margin-top: 3vh;
+    background-color: rgba(255, 255, 255, 0.411);
+    border-radius: 10px;
+}
+
+/* start of section 1 */
+#section1 {
+    height: 100vh;
+    width: 100vw;
+    background-color: rgb(255, 255, 255);
+    margin-bottom: 20px;
+    transform: translateY(100vh);
+    margin: 0;
+    background-image: url("../images/nature2-bg.jpg");
+    background-size: cover;
+}
+
+/* end of section 1 */
 
 
+/* start of section2 */
+#section2 {
+    height: 100vh;
+    width: 100vw;
+    transform:translateY(100vh);
+    background-color: rgb(255, 255, 255);
+    margin: 0;
+    background-image: url("../images/nature3-bg.jpg");
+    background-size: cover;
+}
+
+/* end of section2 */
+
+/* start of footer*/
+footer {
+    transform: translateY(100vh);
+    background-color: #282d32;
+}
+
+#footer-div {
+    display: flex;
+    
+}
+
+/* end of footer */
+
+/* start of start button */
+#start-btn {
+    position: absolute;
+    top: 60%;
+    left: 50%;
+    transform: translateX(-50%);
+    font-size: 20px;
+    font-weight: 600;
+    border-radius: 10px;
+    background-color: rgb(96, 197, 96);
+    color: black;
+    font-family:Georgia, 'Times New Roman', Times, serif;
+    padding: 10px;
+}
+
+#start-btn:hover {
+    background-color: rgb(162, 235, 162);
+    border: 3px solid darkgreen;
+}
+
+/* end of start button */
 
 
 /* animation */
