--- a/css/style.css
+++ b/css/style.css
@@ -111,12 +111,16 @@ footer {
     color: white;
 }
 
+footer a {
+    text-decoration: none;
+}
+
 #footer-div {
     display: flex;
     height: 22vh;
 }
 
-
+/* social section */
 #social-header-text {
     margin-top: 5vh;
     text-align: center;
@@ -132,12 +136,23 @@ footer {
     margin-right: 8px;
 }
 
+
+/* navigation section */
 #navigation-header-text {
     margin-top: 5vh;
     text-align: center;
 }
 
+.navigation-link {
+    color: rgb(126, 117, 117);
+    font-weight: 500;
+    text-align:center;
+    font-size: 12px;
+    margin: 0;
+}
 
+
+/* about us section */
 #aboutus-header-text {
     margin-top: 5vh;
     margin-left: 8vw;
