--- a/css/style.css
+++ b/css/style.css
@@ -254,6 +254,7 @@ p#copyright-text {
   /* start of map-page */
 #map-page {
     width: 100%;
+    height: 100vh;
     position: absolute;
     top: 0;
 }
@@ -278,4 +279,8 @@ p#copyright-text {
 #back-btn {
     position: absolute;
     z-index: 30000;
+}
+
+.clear-bottom {
+    overflow: hidden;
 }
